--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.infnet</groupId>
-	<artifactId>todoapp</artifactId>
+	<artifactId>museuApp</artifactId>
 	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>todoapp Maven Webapp</name>
+	<name>museuApp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -88,7 +88,7 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<finalName>todoapp</finalName>
+		<finalName>museuApp</finalName>
 
 		<plugins>
 			<plugin>
